tree-sitter-rgbasm/test/corpus/expressions.txt
================================================================================
Expressions: arithmetic and precedence
================================================================================

; Basic arithmetic
DEF X = 1 + 2 * 3
DEF Y = (1 + 2) * 3

; Operator precedence with shift and bitwise
DEF Var1 = 1 + 2 << 3 & 7

; Logical and comparisons
DEF Var2 = 1 && 0 || 1
DEF Var3 = 1 == 2
DEF Var4 = 1 != 2

; Interpolation (this is more about string parsing than full semantics)
PRINTLN "The value is {X}"

---

(source_file
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (binary_expression
          (expression
            (number_literal))
          (expression
            (binary_expression
              (expression
                (number_literal))
              (expression
                (number_literal))))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (binary_expression
          (expression
            (expression
              (binary_expression
                (expression
                  (number_literal))
                (expression
                  (number_literal)))))
          (expression
            (number_literal))))))
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (binary_expression
          (expression
            (number_literal))
          (expression
            (binary_expression
              (expression
                (binary_expression
                  (expression
                    (number_literal))
                  (expression
                    (number_literal))))
              (expression
                (number_literal))))))))
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (binary_expression
          (expression
            (binary_expression
              (expression
                (number_literal))
              (expression
                (number_literal))))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (binary_expression
          (expression
            (number_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (binary_expression
          (expression
            (number_literal))
          (expression
            (number_literal))))))
  (inline_comment)
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (string_literal
            (interpolation
              (interpolation_content))))))))

================================================================================
Expressions: all operators
================================================================================

; Exponentiation
DEF POW1 = 2 ** 3
DEF POW2 = 2 ** 3 ** 2

; Shift operators
DEF SHL = 1 << 4
DEF SHR = 16 >> 2
DEF USHR = -16 >>> 2

; Bitwise operators
DEF BAND = $FF & $0F
DEF BOR = $F0 | $0F
DEF BXOR = $FF ^ $AA

; Unary operators
DEF NEG = -5
DEF COMP = ~$FF
DEF NOT = !0

; Comparison operators
DEF LT = 1 < 2
DEF LE = 1 <= 2
DEF GT = 2 > 1
DEF GE = 2 >= 1

---

(source_file
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (binary_expression
          (expression
            (number_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (binary_expression
          (expression
            (number_literal))
          (expression
            (binary_expression
              (expression
                (number_literal))
              (expression
                (number_literal))))))))
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (binary_expression
          (expression
            (number_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (binary_expression
          (expression
            (number_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (unary_expression
          (expression
            (binary_expression
              (expression
                (number_literal))
              (expression
                (number_literal))))))))
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (binary_expression
          (expression
            (number_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (binary_expression
          (expression
            (number_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (binary_expression
          (expression
            (number_literal))
          (expression
            (number_literal))))))
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (unary_expression
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (unary_expression
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (unary_expression
          (expression
            (number_literal))))))
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (binary_expression
          (expression
            (number_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (binary_expression
          (expression
            (number_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (binary_expression
          (expression
            (number_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (binary_expression
          (expression
            (number_literal))
          (expression
            (number_literal)))))))

================================================================================
Expressions: built-in functions
================================================================================

; Memory and type functions
DEF HI = HIGH($1234)
DEF HI = HIGH(BC)
DEF LO = LOW($1234)
DEF BNK = BANK(MySection)
DEF SZ = SIZEOF(MyStruct)
DEF BW = BITWIDTH(255)
DEF TZ = TZCOUNT(8)

---

(source_file
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (register))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (symbol))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (sizeof_function
            (function_name)
            (expression
              (symbol)))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal)))))))

================================================================================
Expressions: ATAN2
================================================================================

PRINTLN ATAN2(1.0, 1.0)

---

(source_file
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (function_call
            (function_name)
            (expression
              (number_literal))
            (expression
              (number_literal))))))))

================================================================================
Expressions: fixed-point functions
================================================================================

; Fixed-point arithmetic
DEF FP_DIV = DIV(6.0, 2.0)
DEF FP_MUL = MUL(2.0, 3.0)
DEF FP_MOD = FMOD(5.5, 2.0)
DEF FP_POW = POW(2.0, 3.0)
DEF FP_LOG = LOG(8.0, 2.0)

; Fixed-point rounding
DEF FP_ROUND = ROUND(3.7)
DEF FP_CEIL = CEIL(3.2)
DEF FP_FLOOR = FLOOR(3.9)

; Fixed-point trigonometry
DEF FP_SIN = SIN(0.5)
DEF FP_COS = COS(0.5)
DEF FP_TAN = TAN(0.5)
DEF FP_ASIN = ASIN(0.5)
DEF FP_ACOS = ACOS(0.5)
DEF FP_ATAN = ATAN(0.5)
DEF FP_ATAN2 = ATAN2(1.0, 1.0)

; Nested function call
DEF NESTED = MUL(64.0, SIN(ANGLE))

---

(source_file
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))
          (expression
            (number_literal))))))
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))))))
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))
          (expression
            (number_literal))))))
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))
          (expression
            (function_call
              (function_name)
              (expression
                (symbol)))))))))

================================================================================
Expressions: string functions
================================================================================

; String manipulation
DEF STR1 = STRCAT("Hello", " ", "World")
DEF STR2 = STRUPR("hello")
DEF STR3 = STRLWR("WORLD")
DEF STR4 = STRSLICE("Hello", 1, 4)
DEF STR5 = STRRPL("foo bar", "bar", "baz")

; String query functions
DEF LEN = STRLEN("Hello")
DEF CMP = STRCMP("abc", "xyz")
DEF FIND = STRFIND("Hello World", "World")
DEF RFIND = STRRFIND("abcabc", "bc")

---

(source_file
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))
          (expression
            (string_literal))
          (expression
            (string_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))
          (expression
            (number_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))
          (expression
            (string_literal))
          (expression
            (string_literal))))))
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))
          (expression
            (string_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))
          (expression
            (string_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))
          (expression
            (string_literal)))))))

================================================================================
Expressions: byte/char functions
================================================================================

; String byte operations
DEF LEN = BYTELEN("Hello")
DEF BYTE1 = STRBYTE("ABC", 0)
DEF BYTE2 = STRBYTE("ABC", 1)

---

(source_file
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))
          (expression
            (number_literal)))))))

================================================================================
Expressions: STRFMT function
================================================================================

; Format strings with arguments
DEF MSG1 = STRFMT("Value: %d", 42)
DEF MSG2 = STRFMT("Name = %s", 100)
DEF MSG3 = STRFMT("Pi = %f", 3.14)

---

(source_file
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))
          (expression
            (number_literal)))))))

================================================================================
Expressions: symbol query functions
================================================================================

; Check symbol properties
DEF IS_DEF = DEF(MySymbol)
DEF IS_CONST = ISCONST(42)
DEF SEC_NAME = SECTION(MyLabel)
DEF SEC_START = STARTOF(VRAM)

---

(source_file
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (symbol))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (symbol))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (startof_function
            (function_name)
            (section_type)))))))

================================================================================
Expressions: Constants
================================================================================

PRINTLN @
PRINTLN .
PRINTLN ..
PRINTLN _RS
PRINTLN _NARG
PRINTLN __SCOPE__
PRINTLN __UTC_DAY__
PRINTLN __UTC_HOUR__
PRINTLN __RGBDS_RC__
PRINTLN __UTC_YEAR__
PRINTLN __UTC_MONTH__
PRINTLN __UTC_MINUTE__
PRINTLN __UTC_SECOND__
PRINTLN __RGBDS_MAJOR__
PRINTLN __RGBDS_MINOR__
PRINTLN __RGBDS_PATCH__
PRINTLN __ISO_8601_UTC__
PRINTLN __RGBDS_VERSION__
PRINTLN __ISO_8601_LOCAL__

---

(source_file
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (constant)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (constant)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (constant)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (constant)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (constant)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (constant)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (constant)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (constant)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (constant)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (constant)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (constant)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (constant)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (constant)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (constant)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (constant)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (constant)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (constant)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (constant)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (constant))))))

================================================================================
Expressions: functions with non-expression parameters
================================================================================

; Functions that accept section types (not expressions)
DEF START_ROM0 = STARTOF(ROM0)
DEF START_ROMX = STARTOF(ROMX)
DEF START_VRAM = STARTOF(VRAM)
DEF START_WRAM0 = STARTOF(WRAM0)
DEF START_HRAM = STARTOF(HRAM)
DEF SIZE_ROM0 = SIZEOF(ROM0)
DEF SIZE_VRAM = SIZEOF(VRAM)

; Functions that accept strings (section names)
DEF START_SEC = STARTOF("MySection")
DEF SIZE_SEC = SIZEOF("MySection")
DEF BANK_SEC = BANK("MySection")

; Functions that accept registers
DEF HIGH_HL = HIGH(HL)
DEF HIGH_BC = HIGH(BC)
DEF HIGH_DE = HIGH(DE)
DEF LOW_HL = LOW(HL)
DEF LOW_BC = LOW(BC)
DEF SIZE_A = SIZEOF(A)
DEF SIZE_HL = SIZEOF(HL)

; Functions that accept special symbol @
DEF BANK_CUR = BANK(@)

; Functions that accept symbol names (raw identifiers)
DEF IS_DEF = DEF(MySymbol)
DEF SEC_OF = SECTION(MyLabel)
DEF IS_DEF_RAW = DEF(#if)
DEF BANK_RAW = BANK(#section)

; Functions that accept filenames
DEF FILE_DATA = READFILE("data.bin")
DEF FILE_PART = READFILE("data.bin", 256)

---

(source_file
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (startof_function
            (function_name)
            (section_type))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (startof_function
            (function_name)
            (section_type))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (startof_function
            (function_name)
            (section_type))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (startof_function
            (function_name)
            (section_type))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (startof_function
            (function_name)
            (section_type))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (sizeof_function
            (function_name)
            (section_type))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (sizeof_function
            (function_name)
            (section_type))))))
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (startof_function
            (function_name)
            (expression
              (string_literal)))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (sizeof_function
            (function_name)
            (expression
              (string_literal)))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))))))
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (register))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (register))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (register))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (register))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (register))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (sizeof_function
            (function_name)
            (expression
              (register)))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (sizeof_function
            (function_name)
            (expression
              (register)))))))
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (constant))))))
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (symbol))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (symbol))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (raw_identifier))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (raw_identifier))))))
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))
          (expression
            (number_literal)))))))

================================================================================
Expressions: charmap functions
================================================================================

; Set up a charmap for testing
CHARMAP "A", 42
CHARMAP ":)", 39
CHARMAP "<br>", 13, 10

; Test charmap functions
DEF LEN1 = CHARLEN("A:)")
DEF LEN2 = CHARLEN("<br>")
DEF SIZE1 = CHARSIZE("A")
DEF SIZE2 = CHARSIZE("<br>")
DEF VAL1 = CHARVAL("A")
DEF VAL2 = CHARVAL("<br>", 0)
DEF VAL3 = CHARVAL("<br>", 1)
DEF IN1 = INCHARMAP("A")
DEF IN2 = INCHARMAP("Z")
DEF REV1 = REVCHAR(42)
DEF REV2 = REVCHAR(13, 10)
DEF CMP1 = CHARCMP("A", ":)")
DEF STR1 = STRCHAR("A:)", 0)
DEF STR2 = STRCHAR("A:)", 1)

---

(source_file
  (inline_comment)
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (string_literal))
        (expression
          (number_literal)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (string_literal))
        (expression
          (number_literal)))))
  (directive
    (simple_directive
      (directive_keyword)
      (argument_list
        (expression
          (string_literal))
        (expression
          (number_literal))
        (expression
          (number_literal)))))
  (inline_comment)
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (number_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))
          (expression
            (string_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))
          (expression
            (number_literal))))))
  (directive
    (def_directive
      (directive_keyword)
      (symbol)
      (expression
        (function_call
          (function_name)
          (expression
            (string_literal))
          (expression
            (number_literal)))))))
